--- a/brand.html
+++ b/brand.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>brands</title>
+    <title>brandss</title>
     <link rel="stylesheet" href="brand.css">
 </head>
 <body>
